auth layer, pre persistance

--- a/views/cohorts.pug
+++ b/views/cohorts.pug
@@ -1,6 +1,6 @@
 extends layout.pug
 
 block content
-    h1 Cohorts
-    p=user
-    button(onclick="signOut()") Signout
+    .container
+        h1 Cohorts
+        p=user.name
