--- a/views/login.pug
+++ b/views/login.pug
@@ -2,11 +2,12 @@ extends layout.pug
 
 block content
     .container
-        .jumbotron.jumbotron-fluid
-        h1.display-4 Hello coach!
+        .jumbotron.mt-4.d-flex.align-items-center.justify-content-start
+            img(src='/papa.png' width='240')
+            h1.display-4.ml-4 Its Papa (Portfolio Mapper)
         p.lead
-            | Tracking portfolios? We got your back.
+            | Hay coach! I've been doing this for years!
         hr.my-4
         p
-            | Portfolio mapper can help you. You will need to have your apprentices create their portfolios in a google doc on google drive and have them share it with you. Grab the fileId (I'll explain later) and then annotate their work indicating when they have a valid piece of evidence for a competency in the standard. This tool gives you an overview of all your cohorts, all your apprentices and their progress to EPA gateway.
+            | Portfolio mapper (Papa) can help you. You will need to have your apprentices create their portfolios in a google doc on google drive and have them share it with you. Grab the fileId (I'll explain later) and then annotate their work indicating when they have a valid piece of evidence for a competency in the standard. This tool gives you an overview of all your cohorts, all your apprentices and their progress to EPA gateway.
         .g-signin2.mt-4(data-onsuccess="onSignIn")
