--- a/views/login.pug
+++ b/views/login.pug
@@ -1,13 +1,13 @@
 extends layout.pug
 
 block content
-    .container
+    .container.mb-4
         .jumbotron.mt-4.d-flex.align-items-center.justify-content-start
-            img(src='/papa.png' width='240')
-            h1.display-4.ml-4 Its Papa (Portfolio Mapper)
+            img(src='/papa.png' width='240' alt='papper logo')
+            h1.display-4.ml-4 Its Pappa (Portfolio Mapper)
         p.lead
-            | Hay coach! I've been doing this for years!
+            | "Hay coaches! I've been doing this for years - let me help you out there."
         hr.my-4
         p
-            | Portfolio mapper (Papa) can help you. You will need to have your apprentices create their portfolios in a google doc on google drive and have them share it with you. Grab the fileId (I'll explain later) and then annotate their work indicating when they have a valid piece of evidence for a competency in the standard. This tool gives you an overview of all your cohorts, all your apprentices and their progress to EPA gateway.
+            | Portfolio mapper (Pappa) can help you. You will need to have your apprentices create their portfolios in a google doc on google drive and have them share it with you. Grab the fileId (I'll explain later) and then annotate their work indicating when they have a valid piece of evidence for a competency in the standard. This tool gives you an overview of all your cohorts, all your apprentices and their progress to EPA gateway.
         .g-signin2.mt-4(data-onsuccess="onSignIn")
