--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,5 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
-  a.navbar-brand(href='/') Portfolio Mapper
+  a.navbar-brand(href='/')
+    img(src='/papa-head.png' alt='papa - portfolio mapper' width='60')
   button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
     span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
