form style tweeks

--- a/views/apprentice.pug
+++ b/views/apprentice.pug
@@ -11,3 +11,6 @@ block content
                     .col-8
                         each thing in [1,2,3]
                             .badge.badge-success.mr-1=thing
+    hr
+    .container
+        a.btn.btn-link(href=`/cohorts`) Back
