--- a/views/login.pug
+++ b/views/login.pug
@@ -4,10 +4,10 @@ block content
     .container.mb-4
         .jumbotron.mt-4.d-flex.align-items-center.justify-content-start
             img(src='/papa.png' width='240' alt='papper logo')
-            h1.display-4.ml-4 Its Pappa (Portfolio Mapper)
+            h1.display-4.ml-4 Its Pappa (portfolio mapper)
         p.lead
-            | "Hay coaches! I've been doing this for years - let me help you out there."
+            | "Hay Coaches! I've been doing this for years."
         hr.my-4
         p
-            | Portfolio mapper (Pappa) can help you. You will need to have your apprentices create their portfolios in a google doc on google drive and have them share it with you. Grab the fileId (I'll explain later) and then annotate their work indicating when they have a valid piece of evidence for a competency in the standard. This tool gives you an overview of all your cohorts, all your apprentices and their progress to EPA gateway.
+            | Pappa can help you map competencies in your apprentices portfolios. You will need to have your apprentices create a master portfolio in a Google doc and have them share it with you. Grab the fileId (I'll explain later) and then add comments their work with tags that you will define indicating when they have a valid piece of evidence for a competency in the standard. This tool gives you an overview of all your apprentices organised by cohort, and their progress to 100% coverage of the standard.
         .g-signin2.mt-4(data-onsuccess="onSignIn")
