--- a/views/standard.pug
+++ b/views/standard.pug
@@ -4,18 +4,19 @@ block content
     .container
         h1=standard.title
         each competency in competencies
-            ul.list-group.list-group-horizontal
+            ul.list-group.list-group-horizontal.mb-1
                 li.list-group-item=competency.tag
                 li.list-group-item.flex-fill=competency.desc
                 li.list-group-item
                     a.btn.btn-danger(href=`/standards/${standard.id}/competencies/${competency.id}/delete`) delete
-    .container.mt-4
-        form(action=`/standards/${standard.id}/competencies` method='POST')
+    .container-fluid.mt-4.p-4.bg-light.border-top
+        form(action=`/standards/${standard.id}/competencies` method='POST').w-50.mx-auto
             .form-group
                 label(for='new-competency-tag') Add a tag
-                input#new-competency-tag.form-control(placeholder='Add a tag you will use in your comments i.e [AWE34]' name='tag' required)
+                input#new-competency-tag.form-control(placeholder='Add a tag you will use in your comments i.e #communication' name='tag' required)
             .form-group
                 label(for='new-competency-desc') Add a description
                 textarea#new-competency-desc.form-control(placeholder='competency description' name='desc' required)
             button.btn.btn-primary Add competency
+    .container.pt-2
         a(href=`/standards`) back
