--- a/views/cohorts.pug
+++ b/views/cohorts.pug
@@ -20,7 +20,12 @@ block content
                                             input#apprentice-fileId.mx-2.w-50.pl-2(name='fileId' placeholder='paste the fileId here' style='transform:translate(0,2px);')
                                             button.btn.btn-primary link portfolio
                                     else
-                                        a(href=`/cohorts/${cohort.id}/apprentices/${apprentice.id}`)=apprentice.name
+                                        .d-flex.align-items-center
+                                            a(href=`/cohorts/${cohort.id}/apprentices/${apprentice.id}`)=apprentice.name
+                                            a.mr-4.ml-3(href=`https://docs.google.com/document/d/${apprentice.fileId}/` target='_Blank')
+                                                img(src='/google-docs-icon-2.svg' width='16' alt='google docs')
+                                            .flex-fill
+                                                include progress.pug
                         form.bg-light.p-4(action=`/cohorts/${cohort.id}/apprentices` method='POST')
                             .form-group.w-50.mx-auto
                                 h2 Add an apprentice to this cohort
