--- a/views/standard.pug
+++ b/views/standard.pug
@@ -1,14 +1,16 @@
 extends layout.pug
+include modal.pug
 
 block content
     .container
         h1=standard.title
         each competency in competencies
             ul.list-group.list-group-horizontal.mb-1
-                li.list-group-item=competency.tag
-                li.list-group-item.flex-fill=competency.desc
+                li.list-group-item.w-30=competency.tag
+                li.list-group-item.flex-fill!=md.render(competency.desc).body
                 li.list-group-item
-                    a.btn.btn-danger(href=`/standards/${standard.id}/competencies/${competency.id}/delete`) delete
+                    a.btn.btn-danger.d-block(href=`/standards/${standard.id}/competencies/${competency.id}/delete`) delete
+                    button.btn.btn-warning.mt-1(type='button' data-toggle='modal' data-target='#modal' style='width:68.63px' onclick=`edit(${standard.id}, ${competency.id}, "${encodeURIComponent(competency.desc)}")`) edit
     .container-fluid.mt-4.p-4.bg-light.border-top
         form(action=`/standards/${standard.id}/competencies` method='POST').w-50.mx-auto
             .form-group
@@ -20,3 +22,20 @@ block content
             button.btn.btn-primary Add competency
     .container.pt-2
         a(href=`/standards`) back
+    +modal('Edit competency')
+        form#edit-form(action=`/` method='POST')
+            .form-group
+                label(labelFor='edit-competency') description
+                textarea#edit-competency.form-control(name='desc' rows='9')
+            .form-group
+                button.btn.btn-secondary(type='button', data-dismiss='modal') Close
+                button.btn.btn-primary.ml-2(type='submit') Save changes
+    script.
+        function edit (standard_id, competency_id, competency) {
+            $('#edit-competency').text(decodeURIComponent(competency))
+            $('#edit-form').attr('action', `/standards/${standard_id}/competencies/${competency_id}/update`)
+        }
+        $('#modal').on('hidden.bs.modal', function () {
+            $('#edit-competency').text('')
+            $('#edit-form').attr('action', '')            
+        })
