modals all the things

--- a/views/standard.pug
+++ b/views/standard.pug
@@ -2,17 +2,27 @@ extends layout.pug
 include modal.pug
 
 block content
+    style.
     .container.pt-4
-        h1=standard.title
+        .row.border-bottom
+            .col-12
+                h1=standard.title
         each competency in competencies
-            ul.list-group.list-group-horizontal.mb-1
-                li.list-group-item.w-30=competency.tag
-                li.list-group-item.flex-fill!=md.render(competency.desc)
-                li.list-group-item
-                    a.btn.btn-danger.d-block(href=`/standards/${standard.id}/competencies/${competency.id}/delete`) delete
-                    button.btn.btn-warning.mt-1(type='button' data-toggle='modal' data-target='#modal' style='width:68.63px' onclick=`edit(${standard.id}, ${competency.id}, "${encodeURIComponent(competency.desc)}")`) edit
-    .container-fluid.mt-4.p-4.bg-light.border-top
-        form(action=`/standards/${standard.id}/competencies` method='POST').w-50.mx-auto
+            .row.border-bottom
+                .col-sm-12.col-md-2.p-2
+                    strong=competency.tag
+                .col-sm-12.col-md-9.p-2!=md.render(competency.desc)
+                .col-sm-12.col-md-1.p-2.d-flex.flex-md-column.align-items-center.justify-content-between
+                    button.btn.btn-warning.mb-2(type='button' data-toggle='modal' data-target='#modal' style='width:68.63px' onclick=`edit(${standard.id}, ${competency.id}, "${encodeURIComponent(competency.desc)}")`) edit
+                    a.d-block(href=`/standards/${standard.id}/competencies/${competency.id}/delete`)
+                        button.btn.btn-danger delete
+        .row
+            .col-12.p-4
+                button.btn.btn-primary(data-toggle='modal' data-target='#add-competency') Add a Competency
+    .container.pt-2
+        a(href=`/standards`) back
+    +modal('Add a Competency', 'add-competency')
+        form(action=`/standards/${standard.id}/competencies` method='POST').w-75.mx-auto
             .form-group
                 label(for='new-competency-tag') Add a tag
                 input#new-competency-tag.form-control(placeholder='Add a tag you will use in your comments i.e #communication' name='tag' required)
@@ -20,8 +30,6 @@ block content
                 label(for='new-competency-desc') Add a description
                 textarea#new-competency-desc.form-control(placeholder='competency description' name='desc' required)
             button.btn.btn-primary Add competency
-    .container.pt-2
-        a(href=`/standards`) back
     +modal('Edit competency')
         form#edit-form(action=`/` method='POST')
             .form-group
