--- a/views/modal.pug
+++ b/views/modal.pug
@@ -1,5 +1,5 @@
-mixin modal(title)
-    #modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby=`modalLabel`, aria-hidden='true')
+mixin modal(title, id = 'modal')
+    .modal.fade(id=id, tabindex='-1', role='dialog', aria-labelledby=`modalLabel`, aria-hidden='true')
         .modal-dialog.modal-dialog-centered(role='document')
             .modal-content
                 .modal-header
