--- a/views/modal.pug
+++ b/views/modal.pug
@@ -6,6 +6,6 @@ mixin modal(title, id = 'modal')
                     h5#modalLabel.modal-title=title
                     button.close(type='button', data-dismiss='modal', aria-label='Close')
                     span(aria-hidden='true') &times;
-                .modal-body
+                .modal-body.bg-light
                     block
 
