--- a/views/standards.pug
+++ b/views/standards.pug
@@ -14,7 +14,7 @@ block content
         form(action="/standards" method="POST").w-75.mx-auto
             .form-group
                 label(for='new-standard') Title for the Standard
-                input#new-standard.form-control(aria-describedby='new-standard-help' placeholder='i.e BCS Software Enginnering Level 4' name='title' required)
+                input#new-standard.form-control(aria-describedby='new-standard-help' placeholder='i.e BCS Software Engineering Level 4' name='title' required)
                 small#new-standard-help.form-text.text-muted You will add the competencies in the next step
             button.btn.btn-primary Add
     .container.pt-2
