--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -12,4 +12,5 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
       li.nav-item
         a.nav-link(href='/cohorts') Cohorts
     .form-inline.my-2.my-lg-0
+      .pill.text-muted.mr-2 v#{version}
       button#signOut.btn.btn-outline-primary.my-2.my-sm-0 Signout
