--- a/views/cohorts.pug
+++ b/views/cohorts.pug
@@ -35,6 +35,14 @@ block content
                                             img(src='/google-docs-icon-2.svg' width='16' alt='google docs')
                                         .flex-fill
                                             include progress.pug
+                                        button.btn.btn-link.text-danger(data-toggle='modal' data-target=`#delete-apprentice-${apprentice.id}`) ⌫
+                                        +modal(`Delete ${apprentice.name.split(' ')[0]}?`, `delete-apprentice-${apprentice.id}`)
+                                            form.w-75.mx-auto(action=`/cohorts/${cohort.id}/apprentices/${apprentice.id}/delete`)
+                                                label.mt-3.mb-4(for=`delete-apprentice-${apprentice.id}`) Are you sure you want to delete this apprentice?
+                                                button.btn.btn-secondary.mr-2(type="reset" data-dismiss='modal') Cancel
+                                                button.btn.btn-danger(id=`delete-apprentice-${apprentice.id}`) Delete
+
+                                            
                         li.list-group-item
                             button.btn.btn-primary(data-toggle='modal' data-target=`#modal-add-apprentice-to-cohort-${cohort.id}`) Add an Apprentice
                 +modal(`Add an apprentice to ${cohort.title}`, `modal-add-apprentice-to-cohort-${cohort.id}`)
